--- a/index.html
+++ b/index.html
@@ -19,118 +19,15 @@
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
   </header>
+
   <div class="container">
-    Timeblocks go here -->
+  </div>
 
 
-    <!-- <!-- <div class="row time-block">
-      <div class="col-md-2 hour">
-        9 AM
-      </div>
-      <textarea class="col-md-8 past first">
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="./script.js"></script>
 
-            </textarea>
-      <button class="col-md-2 saveBtn">
-        Save
-      </button>
-    </div>
-    <div class="row time-block">
-      <div class="col-md-2 hour">
-        10 AM
-      </div>
-      <textarea class="col-md-8 past first">
-
-              </textarea>
-      <button class="col-md-2 saveBtn">
-        Save
-      </button>
-    </div>
-    <div class="row time-block">
-      <div class="col-md-2 hour">
-        11 AM
-      </div>
-      <textarea class="col-md-8 past first">
-
-                </textarea>
-      <button class="col-md-2 saveBtn">
-        Save
-      </button>
-    </div>
-    <div class="row time-block">
-      <div class="col-md-2 hour">
-        12 PM
-      </div>
-      <textarea class="col-md-8 past first">
-
-                  </textarea>
-      <button class="col-md-2 saveBtn">
-        Save
-      </button>
-    </div>
-    <div class="row time-block">
-      <div class="col-md-2 hour">
-        1 PM
-      </div>
-      <textarea class="col-md-8 past first">
-
-                    </textarea>
-      <button class="col-md-2 saveBtn">
-        Save
-      </button>
-    </div>
-    <div class="row time-block">
-      <div class="col-md-2 hour">
-        2 PM
-      </div>
-      <textarea class="col-md-8 past first">
-
-                      </textarea>
-      <button class="col-md-2 saveBtn">
-        Save
-      </button>
-    </div>
-    <div class="row time-block">
-      <div class="col-md-2 hour">
-        3 PM
-      </div>
-      <textarea class="col-md-8 past first">
-
-                        </textarea>
-      <button class="col-md-2 saveBtn">
-        Save
-      </button>
-    </div>
-    <div class="row time-block">
-      <div class="col-md-2 hour">
-        4 PM
-      </div>
-      <textarea class="col-md-8 past first">
-
-                          </textarea>
-      <button class="col-md-2 saveBtn">
-        Save
-      </button>
-    </div>
-    <div class="row time-block">
-      <div class="col-md-2 hour">
-        5 PM
-      </div>
-      <textarea class="col-md-8 past first">
-
-                            </textarea>
-      <button class="col-md-2 saveBtn">
-        Save
-      </button>
-    </div>
-<!--  -->
- -->
-
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <!-- <script type="module" src="./assets/script.mjs"></script>
-    <script type="text/javascript" src="./assets/script.js"></script> -->
-    
 </body>
 
 </html>
